<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="DescriptionPlaceholder">Description</string>
    <string name="NamePlaceholder">Name</string>
    <string name="SceneSafes">Scene Safes</string>
    <string name="Scope">Scope</string>
    <string name="app_name">Mixing Station Qu</string>
    <string name="config">Config</string>
    <string name="dynamic">Dynamic</string>
    <string name="gate">Gate</string>
    <string name="headamp">Preamp(HA)</string>
    <string name="peq">PEQ</string>
    <string name="scene_RoutingIO">Routing I/O</string>
    <string name="scene_effects">Effects</string>
    <string name="scene_mix">Mix Buses</string>
    <string name="scene_outPath">Output Patch</string>
    <string name="scene_process">Channel Process</string>
    <string name="scene_talkback">Talkback</string>
    <string name="sends">Sends</string>
</resources>
