<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <EditText android:id="@id/textName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="4.0dip" android:hint="@string/NamePlaceholder" />
        <EditText android:id="@id/textDescription" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="16.0dip" android:hint="@string/DescriptionPlaceholder" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SceneSafes" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.davidgiga1993.mixingstationlibrary.ui.BindCheckBox android:id="@id/checkboxRouting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scene_RoutingIO" />
                <com.davidgiga1993.mixingstationlibrary.ui.BindCheckBox android:id="@id/checkboxOutputPatch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scene_outPath" />
                <com.davidgiga1993.mixingstationlibrary.ui.BindCheckBox android:id="@id/checkboxPreamp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/headamp" />
                <com.davidgiga1993.mixingstationlibrary.ui.BindCheckBox android:id="@id/checkboxConfig" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/config" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.davidgiga1993.mixingstationlibrary.ui.BindCheckBox android:id="@id/checkboxProcess" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scene_process" />
                <com.davidgiga1993.mixingstationlibrary.ui.BindCheckBox android:id="@id/checkboxBusses" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scene_mix" />
                <com.davidgiga1993.mixingstationlibrary.ui.BindCheckBox android:id="@id/checkboxEffects" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scene_effects" />
                <com.davidgiga1993.mixingstationlibrary.ui.BindCheckBox android:id="@id/checkboxTalkback" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scene_talkback" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>